--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,24 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+
+      # Service containers to run with `container-job`
+    services:
+      # Label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: postgres
+        # Provide the password for postgres
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: mercy
+          POSTGRES_DB: airbnb
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
     - uses: actions/checkout@v3
 
@@ -17,6 +35,9 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: 1.18
+  
+    - name: Run Migrations
+      run: make migrateup
 
     - name: Test
       run: go test -v ./...
