install golang-migrate

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,11 @@ jobs:
       with:
         go-version: 1.18
   
+    - name: Install Golang-Migrate
+      run: curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.2/migrate.linux-amd64.deb | tar xvz
+      sudo mv migrate.linux-amd64 /usr/bin
+      which migrate
+
     - name: Run Migrations
       run: make migrateup
 
