--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,9 +38,9 @@ jobs:
   
     - name: Install Golang-Migrate
       run: |
-        curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.2/migrate.linux-amd64.deb | tar xvf
-        sudo mv migrate.linux-amd64 /usr/bin/migrate
-        which migrate
+       curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.2/migrate.linux-amd64.tar.gz | tar xvz
+       sudo mv migrate /usr/bin/migrate
+       which migrate
 
     - name: Run Migrations
       run: make migrateup
