--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: mercy
           POSTGRES_DB: airbnb
+           # The default PostgreSQL port
+          POSTGRES_PORT: 5432
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
