--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,8 @@ jobs:
           POSTGRES_PASSWORD: mercy
           POSTGRES_DB: airbnb
            # The default PostgreSQL port
-          POSTGRES_PORT: 5432
+        ports:
+          - 5432:5432
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
