--- a/app.env
+++ b/app.env
@@ -2,4 +2,5 @@ DB_DRIVER=pgx
 DB_SOURCE=postgresql://postgres:mercy@localhost:5432/airbnb?sslmode=disable
 SERVER_ADDRESS=0.0.0.0:9000
 TOKEN_SYMMETRIC_KEY=abcdefghijklmnopqrstuvwxyznfgrte
+TOKEN_SYMMETRIC_KEY_ADMIN=fhgytefredswertyhuikoljmnhgtrfed
 ACCESS_TOKEN_DURATION=15m
